# ModelJoin_Operator

./: CMakeLists.txt  README.md  build.sh  main.c
src/: CMakeLists.txt  buffer.c  buffer.h  engine.c  engine.h  operator.c  operator.h  profile.c  profile.h  type.c  type.h
src/ops/: CMakeLists.txt  compare.c  compare.h  scan.c  scan.h
src/ops/Modeljoin/: CMakeLists.txt  activation.c  activation.cu  activation.h  dense.c  dense.cu  dense.h  lstm.c  lstm.cu  lstm.h  mj_common.c  mj_common.cu  mj_common.h  modeljoin.c  modeljoin.h
src/utils/: CMakeLists.txt  cuda_utils.cu  cuda_utils.h  stack.c  stack.h
test/: CMakeLists.txt  iris_test.c  paths.h  sinus_test.c
test/data/: iris.csv  iris.expected  iris_model.csv  sinus.csv  sinus.expected  sinus_model.csv
