add_library(ML_layers modeljoin.c mj_common.c dense.c lstm.c activation.c)

if(USE_CUDA MATCHES ON) 
    add_library(cuda_impls dense.cu lstm.cu mj_common.cu activation.cu)
    target_link_libraries(cuda_impls cublas cuda_utils)
    target_link_libraries(ML_layers cuda_impls)
else()
    find_package(MKL REQUIRED)
    if(MKL_FOUND)
        include_directories(${MKL_INCLUDE})
        target_link_libraries(ML_layers $<LINK_ONLY:MKL::MKL>)
    else()
        message(WARNING "MKL libs not found")
    endif()
endif()